Add LIBX11_{CFLAGS,LDFLAGS} and import where needed

--- a/hdtv/rootext/display/Makefile
+++ b/hdtv/rootext/display/Makefile
@@ -2,4 +2,14 @@
 MODNAME = display
 
 include ../Makefile.def
+
+CFLAGS   += $(LIBX11_CFLAGS)
+CXXFLAGS += $(LIBX11_CFLAGS)
+
+LDFLAGS  += $(LIBX11_LDFLAGS)
+
+LDLIBS   += $(ROOT_GLIBS) -lX11
+
+ROOT_CLING_FLAGS += $(LIBX11_CFLAGS)
+
 include ../Makefile.body
