--- a/hdtv/rootext/mfile-root/Makefile
+++ b/hdtv/rootext/mfile-root/Makefile
@@ -3,8 +3,15 @@ MODNAME := mfile-root
 
 include ../Makefile.def
 
-LDFLAGS += $(MFILE_LDFLAGS)
-LDLIBS += -lmfile
+CFLAGS   += $(LIBMFILE_CFLAGS)
+CXXFLAGS += $(LIBMFILE_CFLAGS)
+
+LDFLAGS  += $(MFILE_LDFLAGS)
+
+LDLIBS   += $(ROOT_LIBS)
+LDLIBS   += -lmfile
+
+ROOT_CLING_FLAGS += $(LIBMFILE_CFLAGS)
 
 MATOP_SOURCES := $(wildcard matop/*.c)
 MATOP_OBJECTS := $(patsubst %.c,%.o,$(MATOP_SOURCES))
