--- a/hdtv/rootext/Makefile.def
+++ b/hdtv/rootext/Makefile.def
@@ -3,19 +3,28 @@ HEADERS := $(wildcard *.hh)
 OBJECTS := $(patsubst %.cc,%.o,$(SOURCES))
 DEPS    := $(patsubst %.cc,%.d,$(SOURCES))
 
-ROOT_CLING        = rootcling
-# Removed -rml lib$(MODNAME).so as a precaution, failed in fit
-ROOT_CLING_FLAGS  = -f $@ -noIncludePaths -inlineInputHeader -s $(TARGET) -rmf $(ROOTMAP)
-ROOT_CXXFLAGS    := $(shell root-config --cflags)
-ROOT_GLIBS       := $(shell root-config --glibs)
+LIBMFILE_CFLAGS  = # e.g. -I/usr/local/include
+LIBMFILE_LDFLAGS = # e.g. -L /opt/lib64
 
-MFILE_CFLAGS  = # e.g. -I/usr/local/include
-MFILE_LDFLAGS = # e.g. -L /opt/lib64
+LIBX11_CFLAGS = # e.g. -I/opt/X11/include
+LIBX11_LDFLAGS = # e.g. -L/opt/X11/lib
 
-CFLAGS       = -O2 -g -Wall -fPIC $(DEPFLAGS) $(MFILE_CFLAGS)
-CXXFLAGS     = $(ROOT_CXXFLAGS) $(MFILE_CFLAGS) -Wall -g -O2 -fPIC $(DEPFLAGS)
+ROOT_CONFIG = root-config
+ROOT_CLING  = rootcling
+
+ROOT_CLING_FLAGS  = -f $@ -noIncludePaths -inlineInputHeader
+ROOT_CLING_FLAGS += -s $(TARGET) -rmf $(ROOTMAP)
+# Removed as a precaution, failed in fit
+# ROOT_CLING_FLAGS += -rml lib$(MODNAME).so
+
+ROOT_CXXFLAGS := $(shell $(ROOT_CONFIG) --cflags)
+ROOT_LIBS     := $(shell $(ROOT_CONFIG) --libs)
+ROOT_GLIBS    := $(shell $(ROOT_CONFIG) --glibs)
+
+CFLAGS       = -O2 -g -Wall -fPIC $(DEPFLAGS)
+CXXFLAGS     = $(ROOT_CXXFLAGS) -Wall -g -O2 -fPIC $(DEPFLAGS)
 LDFLAGS      = -shared
-LDLIBS       = -lstdc++ $(ROOT_GLIBS) -lX11
+LDLIBS       = -lstdc++
 DEPFLAGS     = -MT $@ -MMD -MP -MF $*.Td
 POSTCOMPILE  = mv -f $*.Td $*.d
 
