Add compatibility layer for C++11
The only C++14 dependency was std::make_unique. This adds a compatibility
layer to provide a make_unique implementation when compiling against
C++11.

--- a/hdtv/rootext/Makefile.body
+++ b/hdtv/rootext/Makefile.body
@@ -1,5 +1,10 @@
 .PHONY: all clean
 
+# Add C++14 standard flag if no other C++ standard was selected
+ifneq (,$(findstring CXXFLAGS,-std=))
+  CXXFLAGS += -std=c++14
+endif
+
 all: $(TARGET)
 
 clean:
