--- a/hdtv/rootext/Makefile.def
+++ b/hdtv/rootext/Makefile.def
@@ -22,7 +22,7 @@ ROOT_LIBS     := $(shell $(ROOT_CONFIG) --libs)
 ROOT_GLIBS    := $(shell $(ROOT_CONFIG) --glibs)
 
 CFLAGS       = -O2 -g -Wall -fPIC $(DEPFLAGS)
-CXXFLAGS     = $(ROOT_CXXFLAGS) -Wall -g -O2 -fPIC $(DEPFLAGS)
+CXXFLAGS     = $(ROOT_CXXFLAGS) -Wall -g -O2 -fPIC $(DEPFLAGS) -I../util
 LDFLAGS      = -shared
 LDLIBS       = -lstdc++
 DEPFLAGS     = -MT $@ -MMD -MP -MF $*.Td
