--- a/hdtv/rootext/mfile-root/mfile/CMakeLists.txt
+++ b/hdtv/rootext/mfile-root/mfile/CMakeLists.txt
@@ -68,14 +68,12 @@ if(NOT ${HAVE_SHM})
   target_compile_definitions(${PROJECT_NAME} PRIVATE -DNO_SHM)
 endif(NOT ${HAVE_SHM})
 
-# Install
-include(GNUInstallDirs)
 install(
   TARGETS ${PROJECT_NAME}
   EXPORT ${PROJECT_NAME}Config
-  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+  LIBRARY DESTINATION lib
+  ARCHIVE DESTINATION lib
+  PUBLIC_HEADER DESTINATION include)
 install(
   EXPORT ${PROJECT_NAME}Config
   FILE ${PROJECT_NAME}Config.cmake
