--- a/hdtv/rootext/fit/CMakeLists.txt
+++ b/hdtv/rootext/fit/CMakeLists.txt
@@ -40,10 +40,8 @@ set_target_properties(
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(${PROJECT_NAME} ROOT::Core ROOT::Hist)
 
-# Install
-include(GNUInstallDirs)
 install(
   TARGETS ${PROJECT_NAME}
-  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-  RESOURCE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+  LIBRARY DESTINATION lib
+  ARCHIVE DESTINATION lib
+  RESOURCE DESTINATION lib)
