--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,9 +1,4 @@
-recursive-include bin/ *
-recursive-include data/ *
 recursive-include doc/ *
-recursive-include hdtv/ *
 recursive-include test/ *
 global-exclude *.py[cod]
-exclude .git/
-exclude .gitignore
-exclude .python-version
+include versioneer.py
