--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,29 @@
+[flake8]
+max-line-length = 100
+ignore = E122,E123,E126,E127,E128,E731,E722
+exclude = build,hdtv/_version.py,test,conda.recipe,.git,versioneer.py,benchmarks,.asv
+
 [tool:pytest]
-norecursedirs = efficiency ui test/helpers 
+norecursedirs = .* *.egg* build dist conda.recipe efficiency ui test/helpers
+addopts =
+    --junitxml=junit.xml
+    --ignore setup.py
+    --ignore run_test.py
+    --cov-report term-missing
+    --tb native
+    --strict
+    --durations=20
+env =
+    PYTHONHASHSEED=0
+markers =
+    serial: execute test serially (to avoid race conditions)
+
+[versioneer]
+VCS = git
+versionfile_source = hdtv/_version.py
+versionfile_build = hdtv/_version.py
+tag_prefix =
+parentdir_prefix = hdtv-
+
+[bdist_wheel]
+universal=1
