--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [flake8]
 max-line-length = 100
 ignore = E122,E123,E126,E127,E128,E731,E722
-exclude = build,hdtv/_version.py,test,conda.recipe,.git,versioneer.py,benchmarks,.asv
+exclude = build,hdtv/_version.py,tests,conda.recipe,.git,versioneer.py,benchmarks,.asv
 
 [tool:pytest]
-norecursedirs = .* *.egg* build dist conda.recipe efficiency ui test/helpers
+norecursedirs = .* *.egg* build dist conda.recipe efficiency ui tests/helpers
 addopts =
     --junitxml=junit.xml
     --ignore setup.py
