--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
   - conda info -a
 
 script:
-  - pytest -v --color=yes --cov=hdtv test
+  - pytest -v --color=yes --cov=hdtv tests
 
 after_success:
   - conda install -c conda-forge codecov
