--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,7 @@ exclude = build,hdtv/_version.py,tests,conda.recipe,.git,versioneer.py,benchmark
 
 [tool:pytest]
 norecursedirs = .* *.egg* build dist conda.recipe efficiency ui tests/helpers
+junit_family=xunit2
 addopts =
     --junitxml=junit.xml
     --ignore setup.py
