Fix CMake for separate calibration

--- a/hdtv/rootext/calibration/CMakeLists.txt
+++ b/hdtv/rootext/calibration/CMakeLists.txt
@@ -1,38 +1,16 @@
 cmake_minimum_required(VERSION 3.6 FATAL_ERROR)
 
-project(fit LANGUAGES CXX)
+project(calibration LANGUAGES CXX)
 
 set(SOURCES
-    EEFitter.cc
-    ExpBg.cc
-    Fitter.cc
-    Integral.cc
-    InterpolationBg.cc
-    Param.cc
-    PolyBg.cc
-    TheuerkaufFitter.cc
-    Util.cc)
+    Calibration.cc)
 
 set(HEADERS
-    Background.hh
-    EEFitter.hh
-    ExpBg.hh
-    Fitter.hh
-    Integral.hh
-    InterpolationBg.hh
-    Option.hh
-    Param.hh
-    PolyBg.hh
-    TheuerkaufFitter.hh
-    Util.hh)
+    Calibration.hh)
 
 find_package(ROOT REQUIRED COMPONENTS Core Hist)
 message(STATUS "ROOT Version ${ROOT_VERSION} found in ${ROOT_root_CMD}")
-if(${ROOT_VERSION_MINOR} GREATER_EQUAL 20)
-  include(${ROOT_DIR}/RootMacros.cmake)
-else()
-  include(${ROOT_DIR}/modules/RootNewMacros.cmake)
-endif()
+include(${ROOT_DIR}/RootMacros.cmake)
 
 root_generate_dictionary(G__${PROJECT_NAME} ${HEADERS} LINKDEF LinkDef.h)
 
@@ -47,7 +25,7 @@ set_target_properties(
     "${CMAKE_CURRENT_BINARY_DIR}/lib${PROJECT_NAME}.rootmap;${CMAKE_CURRENT_BINARY_DIR}/lib${PROJECT_NAME}_rdict.pcm"
 )
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(${PROJECT_NAME} ROOT::Core ROOT::Hist)
+target_link_libraries(${PROJECT_NAME} ROOT::Core ROOT::Hist ROOT::Graf ROOT::Gui X11)
 
 install(
   TARGETS ${PROJECT_NAME}
