--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,6 @@
 language: cpp
 
 env:
-  #- PYTHON_VERSION=2.7 ROOT_VERSION=6.20.4
-  - PYTHON_VERSION=2.7 ROOT_VERSION=6.20.2
-  - PYTHON_VERSION=2.7 ROOT_VERSION=6.20.0
-  - PYTHON_VERSION=2.7 ROOT_VERSION=6.18.04
-  - PYTHON_VERSION=2.7 ROOT_VERSION=6.18.00
-
   - PYTHON_VERSION=3.6 ROOT_VERSION=6.20.4
   - PYTHON_VERSION=3.6 ROOT_VERSION=6.20.2
   - PYTHON_VERSION=3.6 ROOT_VERSION=6.20.0
@@ -38,11 +32,7 @@ services:
 
 install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then MINICONDA_OS=Linux; else MINICONDA_OS=MacOSX; fi
-  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-      wget https://repo.continuum.io/miniconda/Miniconda2-latest-$MINICONDA_OS-x86_64.sh -O miniconda.sh;
-    else
-      wget https://repo.continuum.io/miniconda/Miniconda3-latest-$MINICONDA_OS-x86_64.sh -O miniconda.sh;
-    fi
+  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-$MINICONDA_OS-x86_64.sh -O miniconda.sh;
   - bash miniconda.sh -b -p $HOME/miniconda
   - source "$HOME/miniconda/etc/profile.d/conda.sh"
 
