--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [flake8]
-max-line-length = 100
-ignore = E122,E123,E126,E127,E128,E731,E722
+max-line-length = 88
+ignore = E203,W503
 exclude = build,hdtv/_version.py,tests,conda.recipe,.git,versioneer.py,benchmarks,.asv
 
 [tool:pytest]
