--- a/.github/workflows/release-python-package.yml
+++ b/.github/workflows/release-python-package.yml
@@ -16,7 +16,9 @@ jobs:
         with:
           python-version: '3.8'
       - name: Build
-        run: python setup.py sdist bdist_wheel
+        run: |
+          pip install wheel
+          python setup.py sdist bdist_wheel
       - name: Publish package to PyPI
         uses: pypa/gh-action-pypi-publish@master
         with:
