Support unreleased ROOT Versions 6.19.x

--- a/hdtv/rootext/fit/CMakeLists.txt
+++ b/hdtv/rootext/fit/CMakeLists.txt
@@ -30,6 +30,8 @@ find_package(ROOT REQUIRED COMPONENTS Core Hist)
 message(STATUS "ROOT Version ${ROOT_VERSION} found in ${ROOT_root_CMD}")
 if(${ROOT_VERSION_MINOR} GREATER_EQUAL 20)
   include(${ROOT_DIR}/RootMacros.cmake)
+elseif(${ROOT_VERSION_MINOR} EQUAL 19 AND EXISTS ${ROOT_DIR}/RootMacros.cmake)
+  include(${ROOT_DIR}/RootMacros.cmake)
 else()
   include(${ROOT_DIR}/modules/RootNewMacros.cmake)
 endif()
