--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -31,7 +31,7 @@ jobs:
             root-version: '6.24.4'
           - python-version: 3.9
             root-version: '6.24.6'
-          - python-version: 3.10
+          - python-version: '3.10'
             root-version: '6.24.6'
       fail-fast: false
 
