--- a/.github/workflows/compile-without-helpers.yml
+++ b/.github/workflows/compile-without-helpers.yml
@@ -14,12 +14,13 @@ jobs:
       with:
         auto-update-conda: true
         miniconda-version: "latest"
+        mamba-version: "*"
         channels: conda-forge
         python-version: '3.10'
 
     - name: Install dependencies
       shell: bash -l {0}
-      run: conda install root='6.26.2'
+      run: mamba install root='6.26.2'
 
     - name: Build
       shell: bash -l {0}
