--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -53,12 +53,13 @@ jobs:
       with:
         auto-update-conda: true
         miniconda-version: "latest"
+        mamba-version: "*"
         channels: conda-forge
         python-version: ${{ matrix.python-version }}
 
     - name: Install dependencies
       shell: bash -l {0}
-      run: conda install root=${{ matrix.root-version }} numpy scipy prompt_toolkit matplotlib uncertainties docutils pytest pytest-cov
+      run: mamba install root=${{ matrix.root-version }} numpy scipy prompt_toolkit matplotlib uncertainties docutils pytest pytest-cov
 
     - name: Test with pytest
       shell: bash -l {0}
