CI: Exclude python 3.10 + ROOT 6.26.2 (conda conflicts)

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -11,6 +11,7 @@ jobs:
         # - '6.18.00', '6.18.04', '6.20.0' take too long to install via conda (>1h instead of ~5min)
         # - '6.22.00', '6.22.02' are incompatible
         # - '6.22.4' was a broken release
+        # - '6.26.2' with python '3.10' results in unsolvable conda conflicts as of 2022-05-05.
         python-version: ['3.7', '3.8', '3.9', '3.10']
         root-version: ['6.24.0', '6.24.2', '6.24.4', '6.24.6', '6.26.0', '6.26.2']
         exclude:
@@ -20,6 +21,8 @@ jobs:
             root-version: '6.24.2'
           - python-version: '3.10'
             root-version: '6.24.4'
+          - python-version: '3.10'
+            root-version: '6.26.2'
         include:
           - python-version: '3.7'
             root-version: '6.16.00'
@@ -67,4 +70,4 @@ jobs:
 
     - name: Post Coverage
       uses: codecov/codecov-action@v1
-      if: matrix.python-version == 3.10 && matrix.root-version == '6.26.2'
+      if: matrix.python-version == '3.9' && matrix.root-version == '6.26.2'
