--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,38 +12,26 @@ jobs:
         # - '6.22.00', '6.22.02' are incompatible
         # - '6.22.4' was a broken release
         # - '6.26.2' with python '3.10' results in unsolvable conda conflicts as of 2022-05-05.
-        python-version: ['3.7', '3.8', '3.9', '3.10']
-        root-version: ['6.24.0', '6.24.2', '6.24.4', '6.24.6', '6.26.0', '6.26.2', '6.26.4', '6.26.6','6.26.8']
+        python-version: ['3.8', '3.9', '3.10', '3.11']
+        root-version: ['6.24.6', '6.26.6', '6.26.8', '6.26.10']
         exclude:
-          - python-version: '3.10'
-            root-version: '6.24.0'
-          - python-version: '3.10'
-            root-version: '6.24.2'
-          - python-version: '3.10'
-            root-version: '6.24.4'
-          - python-version: '3.10'
-            root-version: '6.26.2'
+          - python-version: '3.11'
+            root-version: '6.24.6'
+          - python-version: '3.11'
+            root-version: '6.26.6'
         include:
           - python-version: '3.7'
             root-version: '6.16.00'
           - python-version: '3.7'
-            root-version: '6.20.2'
-          - python-version: '3.7'
-            root-version: '6.20.4'
-          - python-version: '3.7'
             root-version: '6.20.6'
-          - python-version: '3.7'
-            root-version: '6.22.6'
           - python-version: '3.7'
             root-version: '6.22.8'
-          - python-version: '3.8'
-            root-version: '6.20.2'
-          - python-version: '3.8'
-            root-version: '6.20.4'
+          - python-version: '3.7'
+            root-version: '6.24.6'
+          - python-version: '3.7'
+            root-version: '6.26.8'
           - python-version: '3.8'
             root-version: '6.20.6'
-          - python-version: '3.8'
-            root-version: '6.22.6'
           - python-version: '3.8'
             root-version: '6.22.8'
       fail-fast: false
@@ -70,4 +58,4 @@ jobs:
 
     - name: Post Coverage
       uses: codecov/codecov-action@v1
-      if: matrix.python-version == '3.9' && matrix.root-version == '6.26.2'
+      if: matrix.python-version == '3.11' && matrix.root-version == '6.26.10'
