--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.8', '3.9', '3.10', '3.11']
-        root-version: ['6.26.10', '6.28.10', 6.30.2']
+        root-version: ['6.26.10', '6.28.10', '6.30.2']
       fail-fast: false
 
     steps:
