--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ __pycache__/
 # Distribution / packaging
 .Python
 env/
+env_docs/
 build/
 develop-eggs/
 dist/
@@ -25,6 +26,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+.spyproject/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -56,7 +58,7 @@ junit.xml
 *.log
 
 # Sphinx documentation
-docs/_build/
+doc/sphinx/_build/
 
 # PyBuilder
 target/
