--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ lint.ignore = [
     "RUF012",  # enforces type annotations on a codebase that lacks type annotations
     "B904",
     "ISC001",
-    "UP031",
+    "UP031",  # Use format specifiers instead of percent format
 ]
 lint.select = [
     "E",
