Explicitly give version tag prefix for versioneer

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ markers =
 VCS = git
 versionfile_source = hdtv/_version.py
 versionfile_build = hdtv/_version.py
-tag_prefix =
+tag_prefix = v
 parentdir_prefix = hdtv-
 
 [bdist_wheel]
