--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ lint.ignore = [
     "E501",
     "E722",
     "PLR",
+    "PLC0415",
+    "PLW1641",
     "PLW2901",
     "PLW0642",
     "RUF012",  # enforces type annotations on a codebase that lacks type annotations
