--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,11 @@
+[tool.versioneer]
+VCS = "git"
+style = "pep440"
+versionfile_source = "hdtv/_version.py"
+versionfile_build = "hdtv/_version.py"
+tag_prefix = "v"
+parentdir_prefix = "hdtv-"
+
 [tool.ruff]
 target-version = "py39"
 exclude = ["*.asv", "benchmarks", "_version.py", "versioneer.py"]
